[package]
name = "one-euro-rs"
version = "0.1.0"
authors = ["Michael Mauderer <michael@mauderer.me>"]
description = "A rust implementation of the One Euro Fitler, a fast and simple signal filter, based on the work of Géry Casiez, Nicolas and Daniel Vogel."
license = "MIT"
license-file="LICENSE.md"
repository="https://github.com/MichaelMauderer/one-euro-rs"
readme = "README.md"

[dependencies.num-traits]
version = "0.2"
default-features = false
